Project/manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-backend
  template:
    metadata:
      labels:
        app: project-backend
    spec:
      containers:
        - name: project-backend
          image: project-backend
          imagePullPolicy: Never
