Project/manifests/deployment-broadcaster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster
spec:
  replicas: 3
  selector:
    matchLabels:
      app: project-broadcaster
  template:
    metadata:
      labels:
        app: project-broadcaster
    spec:
      containers:
        - name: project-broadcaster
          image: project-broadcaster
          resources:
            limits:
              cpu: 250m
              memory: 512M
            requests:
              cpu: 25m
              memory: 128M
