Project/manifests/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-frontend
  template:
    metadata:
      labels:
        app: project-frontend
    spec:
      containers:
        - name: project-frontend
          image: project-frontend
          imagePullPolicy: Never
          resources:
            limits:
              cpu: 200m
              memory: 512M
            requests:
              cpu: 50m
              memory: 64M
