Project/manifests/deployment-picture.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picture
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-picture
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: project-picture
    spec:
      volumes:
        - name: pictures-data
          persistentVolumeClaim:
            claimName: picture-claim
      containers:
        - name: project-picture
          image: project-picture
          imagePullPolicy: Never
          volumeMounts:
          - name: pictures-data
            mountPath: /opt/data
          resources:
            limits:
              cpu: 500m
              memory: 1G
            requests:
              cpu: 50m
              memory: 512M
