Project/manifests/rollout-backend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: project-backend
  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: backend-analysis
  template:
    metadata:
      labels:
        app: project-backend
    spec:
      containers:
        - name: project-backend
          image: project-backend
          resources:
            limits:
              cpu: 500m
              memory: 1G
            requests:
              cpu: 50m
              memory: 512M
          readinessProbe:
            initialDelaySeconds: 15
            periodSeconds: 15
            httpGet:
              path: /todos
              port: 8080
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 15
            httpGet:
              path: /todos
              port: 8080
