Project/manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: project-backend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
