Project/manifests/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-frontend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: project-frontend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
