Project/manifests/service-picture.yaml
apiVersion: v1
kind: Service
metadata:
  name: picture-svc
spec:
  type: ClusterIP
  selector:
    app: project-picture
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
